crates/analyzer/tests/snapshots/errors__call_keccak_with_generic_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `keccak256` function does not expect generic arguments
  ┌─ [snippet]:3:12
  │
3 │   keccak256<10>(1)
  │            ^^^^ unexpected generic argument list

error: `u256` can not be used as an argument to `keccak256`
  ┌─ [snippet]:3:16
  │
3 │   keccak256<10>(1)
  │                ^^^ wrong type
  │
  = Note: `keccak256` expects a byte array argument


